--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "setupproject",
+  "name": "gallery",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
   "scripts": {
-    "sass": "node-sass -w scss/ -o src/css/ --recursive",
-    "server": "live-server"
+    "sass": "node-sass -w scss/ -o src/assets/css/ --recursive",
+    "start": "live-server"
   },
   "author": "Lazar Mladenovic",
   "license": "MIT",
   "devDependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
-    "popper.js": "^1.16.0",
-    "sass": "^1.23.1"
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.0"
   }
 }
