--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Lazar Mladenovic",
   "license": "MIT",
   "devDependencies": {
-    "bootstrap": "^4.3.1",
+    "node-sass": "^4.13.1"
+  },
+  "dependencies": {
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.1",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "bootstrap": "^4.3.1",
+    "@fortawesome/fontawesome-free": "^5.13.0"
   }
 }
